--- a/src/main/resources/LoginInterface.fxml
+++ b/src/main/resources/LoginInterface.fxml
@@ -3,6 +3,8 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
@@ -12,12 +14,17 @@
    <HBox>
       <VBox style="-fx-background-color: gray; -fx-pref-width: 200; -fx-pref-height: 400;" />
    </HBox>
-   <VBox layoutX="242.0" layoutY="76.0" prefHeight="205.0" prefWidth="300.0" spacing="10">
+   <VBox layoutX="235.0" layoutY="143.0" prefHeight="205.0" prefWidth="300.0" spacing="10">
       <Text style="-fx-fill: black; -fx-font-size: 18px;" text="Email:" />
       <TextField fx:id="emailField" style="-fx-background-color: white; -fx-border-color: gray; -fx-border-radius: 5px; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.16), 5, 0, 0, 5);" />
       <Text style="-fx-fill: black; -fx-font-size: 18px;" text="Password:" />
       <PasswordField fx:id="passwordField" style="-fx-background-color: white; -fx-border-color: gray; -fx-border-radius: 5px; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.16), 5, 0, 0, 5);" />
-      <Button fx:id="submitButton" contentDisplay="CENTER" onAction="#authentification" style="-fx-background-color: red; -fx-text-fill: white; -fx-border-radius: 5px; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.16), 5, 0, 0, 5);" text="Login" textAlignment="CENTER" />
+      <Button fx:id="submitButton" contentDisplay="CENTER" onAction="#authentification" style="-fx-background-color: red; -fx-text-fill: white; -fx-border-radius: 5px; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.16), 5, 0, 0, 5);" text="Login" textAlignment="CENTER" textFill="WHITE" />
       <Button fx:id="resetButton" onAction="#changerMotDePasse" style="-fx-background-color: gray; -fx-text-fill: white; -fx-border-radius: 5px; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.16), 5, 0, 0, 5);" text="Reset Password" />
    </VBox>
+   <ImageView fitHeight="111.0" fitWidth="130.0" layoutX="330.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
+      <image>
+         <Image url="@userIcon.png" />
+      </image>
+   </ImageView>
 </AnchorPane>
