--- a/src/main/resources/AjouterFormation.fxml
+++ b/src/main/resources/AjouterFormation.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -20,25 +21,23 @@
                     <left>
                         <HBox prefHeight="361.0" prefWidth="121.0" BorderPane.alignment="CENTER">
                             <children>
-                                <HBox prefHeight="361.0" prefWidth="133.0" style="-fx-background-color: C4C4C4;">
+                                <HBox prefHeight="361.0" prefWidth="133.0" style="-fx-background-color: #C4C4C4;">
                                     <children>
-                                        <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="79.0" style="-fx-background-color: E22D0C;" text="Accueil" textFill="#f2eded">
+                                        <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="79.0" style="-fx-background-color: #E22D0C; -fx-text-fill: white; -fx-font-weight: bold;" text="Accueil">
                                             <HBox.margin>
                                                 <Insets left="15.0" top="30.0" />
                                             </HBox.margin>
+                                            <padding>
+                                                <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
+                                            </padding>
                                         </Button>
-                                        <TextField prefHeight="32.0" prefWidth="82.0" scaleZ="10.0" style="-fx-background-color: f5f5f5;" text="Rechercher" translateX="-20.0">
-                                            <HBox.margin>
-                                                <Insets left="-60.0" top="75.0" />
-                                            </HBox.margin>
-                                        </TextField>
                                     </children>
                                 </HBox>
                             </children>
                         </HBox>
                     </left>
                     <top>
-                        <HBox prefHeight="83.0" prefWidth="645.0" style="-fx-background-color: C4C4C4;" BorderPane.alignment="CENTER">
+                        <HBox prefHeight="83.0" prefWidth="645.0" style="-fx-background-color: #C4C4C4;" BorderPane.alignment="CENTER">
                             <children>
                                 <ImageView fitHeight="47.0" fitWidth="95.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
@@ -76,55 +75,58 @@
                             <children>
                                 <HBox prefHeight="100.0" prefWidth="200.0">
                                     <children>
-                                        <ImageView fitHeight="131.0" fitWidth="107.0" pickOnBounds="true" preserveRatio="true">
-                                            <image>
-                                                <Image url="@image1.png" />
-                                            </image>
+                                        <ImageView fx:id="imageView" fitHeight="131.0" fitWidth="107.0" pickOnBounds="true" preserveRatio="true">
                                             <HBox.margin>
                                                 <Insets left="170.0" top="30.0" />
                                             </HBox.margin>
                                         </ImageView>
+                                        <Button mnemonicParsing="false" onAction="#handleSelectImage" style="-fx-background-color: #E22D0C; -fx-text-fill: white; -fx-font-weight: bold;" text="Sélectionner Image">
+                                            <HBox.margin>
+                                                <Insets left="15.0" top="30.0" />
+                                            </HBox.margin>
+                                            <padding>
+                                                <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
+                                            </padding>
+                                        </Button>
                                     </children>
                                 </HBox>
-                                <Label text="Ajouter une formation :">
-                                    <VBox.margin>
-                                        <Insets left="40.0" />
-                                    </VBox.margin>
-                                </Label>
-                                <Label text="Titre">
+                                <Label style="-fx-font-weight: bold;" text="Titre">
                                     <VBox.margin>
                                         <Insets left="40.0" top="10.0" />
                                     </VBox.margin>
                                 </Label>
                                 <TextField fx:id="tfTitre" prefHeight="26.0" prefWidth="275.0">
                                     <VBox.margin>
-                                        <Insets left="200.0" top="-18.0" />
+                                        <Insets left="40.0" top="5.0" />
                                     </VBox.margin>
                                 </TextField>
-                                <Label text="Description :">
+                                <Label style="-fx-font-weight: bold;" text="Description">
                                     <VBox.margin>
                                         <Insets left="40.0" top="10.0" />
                                     </VBox.margin>
                                 </Label>
-                                <TextField fx:id="tfDescription">
+                                <TextField fx:id="tfDescription" prefHeight="26.0" prefWidth="275.0">
                                     <VBox.margin>
-                                        <Insets left="200.0" top="-18.0" />
+                                        <Insets left="40.0" top="5.0" />
                                     </VBox.margin>
                                 </TextField>
-                                <Label text="Id Enseignant: ">
+                                <Label style="-fx-font-weight: bold;" text="Date de Formation">
                                     <VBox.margin>
                                         <Insets left="40.0" top="10.0" />
                                     </VBox.margin>
                                 </Label>
-                                <TextField fx:id="tfIdEnseignant">
+                                <DatePicker fx:id="datePicker" prefHeight="26.0" prefWidth="275.0">
                                     <VBox.margin>
-                                        <Insets left="200.0" top="-18.0" />
+                                        <Insets left="40.0" top="5.0" />
                                     </VBox.margin>
-                                </TextField>
-                                <Button mnemonicParsing="false" onAction="#handleAjouterFormation" style="-fx-background-color: E22D0C;" text="Ajouter" textFill="#f5efef">
+                                </DatePicker>
+                                <Button fx:id="btAjouter" mnemonicParsing="false" onAction="#handleAjouterFormation" prefHeight="33.0" prefWidth="149.0" style="-fx-background-color: #E22D0C; -fx-text-fill: white; -fx-font-weight: bold;" text="Ajouter Formation">
                                     <VBox.margin>
-                                        <Insets left="210.0" top="20.0" />
+                                        <Insets left="195.0" top="10.0" />
                                     </VBox.margin>
+                                    <padding>
+                                        <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
+                                    </padding>
                                 </Button>
                             </children>
                             <BorderPane.margin>
