--- a/src/main/resources/affichageQuiz.fxml
+++ b/src/main/resources/affichageQuiz.fxml
@@ -43,7 +43,7 @@
                      </buttons>
                   </ButtonBar>
                 <Button layoutX="8.0" layoutY="179.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="226.0" style="-fx-background-color: d40707;" text="Accueil" />
-                  <Button layoutX="8.0" layoutY="230.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="226.0" style="-fx-background-color: red;" text="Créer un quiz" />
+                  <Button layoutX="8.0" layoutY="230.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="226.0" style="-fx-background-color: red;" text="Créer un quiz" fx:id="btnCreerQuiz"/>
           </children>
         </AnchorPane>
         <ScrollPane prefHeight="-1.0" prefWidth="-1.0">
@@ -91,7 +91,7 @@
                                     <Font name="Constantia Bold Italic" size="29.0" />
                                  </font>
                               </Label>
-                                 <Button id="afficherQuestions" layoutX="260.0" layoutY="361.0" mnemonicParsing="false" onAction="#showQuestionsDialog" text="Afficher les questions" />                              <Button id="ModifierQuiz" layoutX="260.0" layoutY="401.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="131.0" text="Modifier le quiz" />                           </children>
+                                 <Button id="afficherQuestions" layoutX="260.0" layoutY="361.0" mnemonicParsing="false" onAction="#showQuestionsDialog" text="Afficher les questions" />                              <Button id="ModifierQuiz" fx:id="btnModifier" layoutX="260.0" layoutY="401.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="131.0" text="Modifier le quiz" />                           </children>
                         </AnchorPane>
                         <Button layoutX="157.0" layoutY="17.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="79.0" style="-fx-background-color: d40707;" text="Cours">
                            <font>
