--- a/src/main/resources/GererFormation.fxml
+++ b/src/main/resources/GererFormation.fxml
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
@@ -14,41 +10,12 @@
 <HBox prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.GererFormation">
     <children>
         <!-- Sidebar -->
-        <VBox fx:id="sidebar" prefHeight="400.0" prefWidth="163.0" style="-fx-background-color: #C4C4C4;">
-            <children>
-                <!-- Space for Logo -->
-                <AnchorPane prefHeight="56.0" prefWidth="250.0">
-                    <children>
-                        <ImageView fx:id="logo" fitHeight="56.0" fitWidth="250.0" pickOnBounds="true" preserveRatio="true">
-                            <image>
-                                <Image url="@Logo_ESPRIT_Ariana-removebg-preview.png" />
-                            </image>
-                        </ImageView>
-                    </children>
-                </AnchorPane>
-
-                <!-- Search Bar -->
-                <HBox alignment="CENTER" prefHeight="40.0" prefWidth="163.0" style="-fx-background-color: #C4C4C4;">
-                    <children>
-                        <TextField fx:id="searchField" prefHeight="25.0" prefWidth="125.0" promptText="Rechercher..." style="-fx-background-color: white; -fx-text-fill: black; -fx-prompt-text-fill: gray;" />
-                        <Button onAction="#handleSearch" style="-fx-background-color: #C4C4C4; -fx-text-fill: black; -fx-font-size: 14px;" text="Rech" />
-                    </children>
-                    <padding>
-                        <Insets bottom="10.0" left="5.0" right="5.0" top="10.0" />
-                    </padding>
-                </HBox>
-
-                <!-- Buttons -->
-                <Button style="-fx-background-color: #C4C4C4; -fx-text-fill: black; -fx-font-size: 14px;" text="Gérer les utilisateurs" />
-                <Button style="-fx-background-color: #C4C4C4; -fx-text-fill: black; -fx-font-size: 14px;" text="Gérer les offres " />
-                <Button style="-fx-background-color: #C4C4C4; -fx-text-fill: black; -fx-font-size: 14px;" text="Gérer les Formations" onAction="#handleModifierFormation" />
-            </children>
-        </VBox>
+        <VBox fx:id="sidebar" prefHeight="403.0" prefWidth="0.0" style="-fx-background-color: #C4C4C4;" />
 
         <!-- Main Content -->
         <AnchorPane fx:id="mainContent" prefHeight="400.0" prefWidth="437.0" style="-fx-background-color: #f0f0f0;">
-            <children>
-                <VBox alignment="CENTER" layoutY="11.2" prefHeight="378.0" prefWidth="438.0" spacing="10" AnchorPane.bottomAnchor="11.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="11.0">
+         <children>
+                <VBox alignment="CENTER" layoutX="85.0" layoutY="25.0" prefHeight="378.0" prefWidth="438.0" spacing="10">
                     <TableView fx:id="tableView" prefHeight="304.0" prefWidth="600.0">
                         <columns>
                             <TableColumn fx:id="titreFormationColumn" prefWidth="150.0" text="Titre de la formation" />
@@ -63,7 +30,7 @@
                         <Button onAction="#handleSupprimerFormation" style="-fx-background-color: #E22D0C; -fx-text-fill: white;" text="Supprimer Formation" />
                     </HBox>
                 </VBox>
-            </children>
+         </children>
         </AnchorPane>
     </children>
 </HBox>
