--- a/src/main/resources/listeMatiereQuiz.fxml
+++ b/src/main/resources/listeMatiereQuiz.fxml
@@ -20,7 +20,7 @@
   <children>
     <SplitPane dividerPositions="0.2505567928730512" focusTraversable="true" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
       <items>
-          <AnchorPane minWidth="250" maxWidth="250" prefWidth="200" style="-fx-background-color: #A9A9A9;">
+          <AnchorPane maxWidth="250" minWidth="250" prefWidth="200" style="-fx-background-color: #A9A9A9;">
           <children>
                   <AnchorPane layoutX="-1.0" prefHeight="129.0" prefWidth="223.0">
                      <children>
@@ -31,28 +31,18 @@
                         </ImageView>
                      </children>
                   </AnchorPane>
-            <Label alignment="CENTER" layoutX="15.0" layoutY="142.0" minWidth="60.0" prefWidth="-1.0" style="&#10;" text="Module: QUIZ" textAlignment="CENTER" textFill="#1f1b1b" wrapText="false">
-              <font>
-                <Font name="Consolas" size="18.0" fx:id="x1" />
-              </font>
-            </Label>
                   <ButtonBar layoutX="-1.0" layoutY="276.0" prefHeight="40.0" prefWidth="235.0">
-                     <buttons>
-                         <Button mnemonicParsing="false" prefHeight="31.0" prefWidth="234.0" style="-fx-background-color: d40707;" text="Profile" />
-                     </buttons>
                   </ButtonBar>
-                <Button layoutX="8.0" layoutY="179.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="226.0" style="-fx-background-color: d40707;" text="Accueil" />
-                  <Button fx:id="btnCreerQuiz" layoutX="8.0" layoutY="230.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="226.0" style="-fx-background-color: red;" text="Afficher mes matieres" />
+                <Button layoutX="8.0" layoutY="171.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="226.0" style="-fx-background-color: #A9A9A9; -fx-border-color: black;" text="Revenir vers l'accueil" onAction="#handleAccueil">
+                     <font>
+                        <Font name="Arial" size="16.0" />
+                     </font></Button>
           </children>
         </AnchorPane>
         <ScrollPane prefHeight="-1.0" prefWidth="-1.0">
                <content>
                   <AnchorPane prefHeight="564.0" prefWidth="657.0">
                      <children>
-                        <Button layoutX="57.0" layoutY="17.0" mnemonicParsing="false" style="-fx-background-color: red;" text="Quiz">
-                           <font>
-                              <Font size="15.0" />
-                           </font></Button>
                          <AnchorPane id="parentContainer" fx:id="parentContainer" layoutX="1.0" layoutY="73.0" prefHeight="497.0" prefWidth="649.0" style="-fx-background-position: center center; -fx-background-size: contain;">
                              <children>
                                  <VBox fx:id="vboxContainer" />
@@ -99,19 +89,19 @@
                                     <Image url="@math.png" />
                                  </image>
                               </ImageView>
-                              <Button id="Math" layoutX="64.0" layoutY="202.0" mnemonicParsing="false" text="Afficher les quiz" onAction="#handleMatiereButton"/>
+                              <Button id="Math" layoutX="64.0" layoutY="202.0" mnemonicParsing="false" onAction="#handleMatiereButton" text="Afficher les quiz" />
                               <ImageView fitHeight="89.0" fitWidth="112.0" layoutX="276.0" layoutY="101.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@physique.png" />
                                  </image>
                               </ImageView>
-                              <Button id="Physique" layoutX="275.0" layoutY="202.0" mnemonicParsing="false" text="Afficher les quiz" onAction="#handleMatiereButton"/>
+                              <Button id="Physique" layoutX="275.0" layoutY="202.0" mnemonicParsing="false" onAction="#handleMatiereButton" text="Afficher les quiz" />
                               <ImageView fitHeight="100.0" fitWidth="112.0" layoutX="479.0" layoutY="97.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@info.png" />
                                  </image>
                               </ImageView>
-                              <Button id="Informatique" layoutX="479.0" layoutY="202.0" mnemonicParsing="false" text="Afficher les quiz" onAction="#handleMatiereButton"/>
+                              <Button id="Informatique" layoutX="479.0" layoutY="202.0" mnemonicParsing="false" onAction="#handleMatiereButton" text="Afficher les quiz" />
                               <ImageView fitHeight="99.0" fitWidth="119.0" layoutX="271.0" layoutY="295.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@fr.png" />
@@ -127,20 +117,10 @@
                                     <Image url="@reseau.png" />
                                  </image>
                               </ImageView>
-                              <Button id="anglais" layoutX="64.0" layoutY="397.0" mnemonicParsing="false" text="Afficher les quiz" onAction="#handleMatiereButton"/>
-                              <Button id="francais" layoutX="275.0" layoutY="397.0" mnemonicParsing="false" text="Afficher les quiz" onAction="#handleMatiereButton"/>
-                              <Button id="reseau" layoutX="479.0" layoutY="397.0" mnemonicParsing="false" text="Afficher les quiz" onAction="#handleMatiereButton"/>                           </children>
+                              <Button id="anglais" layoutX="64.0" layoutY="397.0" mnemonicParsing="false" onAction="#handleMatiereButton" text="Afficher les quiz" />
+                              <Button id="francais" layoutX="275.0" layoutY="397.0" mnemonicParsing="false" onAction="#handleMatiereButton" text="Afficher les quiz" />
+                              <Button id="reseau" layoutX="479.0" layoutY="397.0" mnemonicParsing="false" onAction="#handleMatiereButton" text="Afficher les quiz" />                           </children>
                         </AnchorPane>
-                        <Button layoutX="157.0" layoutY="17.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="79.0" style="-fx-background-color: d40707;" text="Cours">
-                           <font>
-                              <Font size="15.0" />
-                           </font>
-                        </Button>
-                        <Button layoutX="484.0" layoutY="14.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="119.0" style="-fx-background-color: grey;" text="Deconnexion">
-                           <font>
-                              <Font size="15.0" />
-                           </font>
-                        </Button>
                         <Separator layoutX="-1.0" layoutY="67.0" prefHeight="5.0" prefWidth="647.0" />
                      </children>
                   </AnchorPane>
