--- a/src/main/resources/listeQuizEtudiant.fxml
+++ b/src/main/resources/listeQuizEtudiant.fxml
@@ -49,12 +49,11 @@
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-<?import javafx.scene.control.cell.PropertyValueFactory?>
 <VBox prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.ListQuizEtudiantController">
   <children>
     <SplitPane dividerPositions="0.2505567928730512" focusTraversable="true" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
       <items>
-          <AnchorPane minWidth="250" maxWidth="250" prefWidth="200" style="-fx-background-color: #A9A9A9;">
+          <AnchorPane maxWidth="250" minWidth="250" prefWidth="200" style="-fx-background-color: #A9A9A9;">
           <children>
                   <AnchorPane layoutX="-1.0" prefHeight="129.0" prefWidth="223.0">
                      <children>
@@ -65,28 +64,20 @@
                         </ImageView>
                      </children>
                   </AnchorPane>
-            <Label alignment="CENTER" layoutX="15.0" layoutY="142.0" minWidth="60.0" prefWidth="-1.0" style="&#10;" text="Module: QUIZ" textAlignment="CENTER" textFill="#1f1b1b" wrapText="false">
-              <font>
-                <Font name="Consolas" size="18.0" fx:id="x1" />
-              </font>
-            </Label>
                   <ButtonBar layoutX="-1.0" layoutY="276.0" prefHeight="40.0" prefWidth="235.0">
                      <buttons>
-                        <Button mnemonicParsing="false" prefHeight="31.0" prefWidth="234.0" style="-fx-background-color: d40707;" text="Profile" />
                      </buttons>
                   </ButtonBar>
-                <Button layoutX="8.0" layoutY="179.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="226.0" style="-fx-background-color: d40707;" text="Accueil" />
-              <Button fx:id="btnCreerQuiz" layoutX="8.0" layoutY="230.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="226.0" style="-fx-background-color: d40707;" text="Afficher mes matieres" />
+                <Button onAction="#handleAccueil" layoutX="8.0" layoutY="171.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="226.0" style="-fx-background-color: #A9A9A9; -fx-border-color: black;" text="Revenir vers l'accueil">
+                     <font>
+                        <Font name="Arial" size="16.0" />
+                     </font></Button>
           </children>
         </AnchorPane>
         <ScrollPane prefHeight="-1.0" prefWidth="-1.0">
                <content>
-                  <AnchorPane prefHeight="564.0" prefWidth="657.0">
+                  <AnchorPane prefHeight="564.0" prefWidth="657.0" style="-fx-background-color: white;">
                      <children>
-                        <Button layoutX="57.0" layoutY="17.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="79.0" style="-fx-background-color: red;" text="Quiz">
-                           <font>
-                              <Font size="15.0" />
-                           </font></Button>
                         <AnchorPane layoutY="69.0" prefHeight="493.0" prefWidth="643.0">
                            <children>
                                <TableView fx:id="quizTable" editable="true" prefHeight="493.0" prefWidth="643.0">
@@ -101,16 +92,16 @@
                                </TableView>
                            </children>
                         </AnchorPane>
-                        <Button layoutX="157.0" layoutY="17.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="79.0" style="-fx-background-color: d40707;" text="Cours">
+                        <ImageView fitHeight="49.0" fitWidth="167.0" layoutX="35.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@quiz.jpg" />
+                           </image>
+                        </ImageView>
+                        <Label alignment="CENTER" layoutX="267.0" layoutY="20.0" minWidth="60.0" prefHeight="31.0" prefWidth="223.0" style="&#10;" text="Quiz Dashboard" textAlignment="CENTER" textFill="#8f1919" wrapText="false">
                            <font>
-                              <Font size="15.0" />
+                              <Font name="Arial Rounded MT Bold" size="26.0" fx:id="x1" />
                            </font>
-                        </Button>
-                        <Button layoutX="484.0" layoutY="14.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="119.0" style="-fx-background-color: grey;" text="Deconnexion">
-                           <font>
-                              <Font size="15.0" />
-                           </font>
-                        </Button>
+                        </Label>
                      </children>
                   </AnchorPane>
                </content>
