--- a/src/main/resources/LoginInterface.fxml
+++ b/src/main/resources/LoginInterface.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
@@ -11,20 +12,33 @@
 <?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.LoginInterface">
-   <HBox>
-      <VBox style="-fx-background-color: gray; -fx-pref-width: 200; -fx-pref-height: 400;" />
-   </HBox>
-   <VBox layoutX="235.0" layoutY="143.0" prefHeight="205.0" prefWidth="300.0" spacing="10">
-      <Text style="-fx-fill: black; -fx-font-size: 18px;" text="Email:" />
+   <HBox />
+   <VBox layoutX="150.0" layoutY="135.0" prefHeight="205.0" prefWidth="300.0" spacing="10">
+      <Text style="-fx-fill: black; -fx-font-size: 18px;" text="Email:">
+         <VBox.margin>
+            <Insets />
+         </VBox.margin></Text>
       <TextField fx:id="emailField" style="-fx-background-color: white; -fx-border-color: gray; -fx-border-radius: 5px; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.16), 5, 0, 0, 5);" />
       <Text style="-fx-fill: black; -fx-font-size: 18px;" text="Password:" />
       <PasswordField fx:id="passwordField" style="-fx-background-color: white; -fx-border-color: gray; -fx-border-radius: 5px; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.16), 5, 0, 0, 5);" />
-      <Button fx:id="submitButton" contentDisplay="CENTER" onAction="#authentification" style="-fx-background-color: red; -fx-text-fill: white; -fx-border-radius: 5px; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.16), 5, 0, 0, 5);" text="Login" textAlignment="CENTER" textFill="WHITE" />
-      <Button fx:id="resetButton" style="-fx-background-color: gray; -fx-text-fill: white; -fx-border-radius: 5px; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.16), 5, 0, 0, 5);" text="Reset Password" />
+      <Button fx:id="submitButton" contentDisplay="CENTER" onAction="#authentification" style="-fx-background-color: red; -fx-text-fill: white; -fx-border-radius: 5px; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.16), 5, 0, 0, 5);" text="Login" textAlignment="CENTER" textFill="WHITE">
+         <VBox.margin>
+            <Insets left="112.0" />
+         </VBox.margin>
+      </Button>
+      <Button fx:id="resetButton" onAction="#showForgetPasswordInterface" style="-fx-background-color: gray; -fx-text-fill: white; -fx-border-radius: 5px; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.16), 5, 0, 0, 5);" text="Forget Password">
+         <VBox.margin>
+            <Insets left="88.0" />
+         </VBox.margin></Button>
    </VBox>
-   <ImageView fitHeight="111.0" fitWidth="130.0" layoutX="330.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
+   <ImageView fitHeight="55.0" fitWidth="112.0">
       <image>
-         <Image url="@userIcon.png" />
+         <Image url="@espritlogo.png" />
+      </image>
+   </ImageView>
+   <ImageView fitHeight="169.0" fitWidth="241.0" layoutX="180.0">
+      <image>
+         <Image url="@logo_e_learning-removebg-preview.png" />
       </image>
    </ImageView>
 </AnchorPane>
